clusters/eks-use1/apps/tailscale/sidecar/ddns.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cloudflare-ddns
  labels:
    app: cloudflare-ddns
spec:
  selector:
    matchLabels:
      app: cloudflare-ddns
  template:
    metadata:
      labels:
        app: cloudflare-ddns
    spec:
      containers:
        - name: cloudflare-ddns
          image: favonia/cloudflare-ddns:latest
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
