clusters/eks-use1/apps/tailscale/sidecar/derper.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: derper
  labels:
    app: derper
spec:
  selector:
    matchLabels:
      app: derper
  template:
    metadata:
      labels:
        app: derper
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      dnsConfig:
        nameservers:
        - "1.1.1.1"
        - "1.0.0.1"
      containers:
      - name: derper
        image: ghcr.io/rajsinghtech/derper:v0.0.1
        imagePullPolicy: Always
        command:
        - /bin/sh
        - -c
        - |
          /usr/local/bin/containerboot &
          exec /usr/local/bin/derper --hostname $(TS_DERP_HOSTNAME) --bootstrap-dns-names $(TS_DERP_HOSTNAME) -certmode $(TS_DERP_CERTMODE) -certdir /root/derper/$(TS_DERP_HOSTNAME) --stun --verify-clients=$(TS_DERP_VERIFY_CLIENTS) --http-port=$(TS_DERP_HTTP_PORT) -a :$(TS_DERP_LISTEN_PORT) --stun-port=$(TS_DERP_STUN_PORT) $(TS_DERP_EXTRA_ARGS)
        securityContext:
          privileged: true
          capabilities:
            add:
            - NET_ADMIN
            - NET_RAW
        volumeMounts:
        - name: derper-tls
          mountPath: /secrets
          readOnly: true
        - name: tailscale-state
          mountPath: /tsstate
        - name: derper-config
          mountPath: /root/derper
        - name: debug-key
          mountPath: /etc/debug-key
          readOnly: true
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        - containerPort: 3478
          name: stun
          protocol: UDP
      volumes:
      - name: derper-tls
        secret:
          secretName: derper-tls
      - name: tailscale-state
        emptyDir: {}
      - name: derper-config
        emptyDir: {}
      - name: debug-key
        secret:
          secretName: derp-secret
