clusters/eks-use1/apps/tailscale/sidecar/derpprobe.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: derpprobe
  labels:
    app: derpprobe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: derpprobe
  template:
    metadata:
      labels:
        app: derpprobe
    spec:
      containers:
      - name: derpprobe
        image: ghcr.io/rajsinghtech/derpprobe:v0.0.1
        command: ["/bin/sh", "-c", "/usr/local/bin/derpprobe -derp-map=file:///config/custom-derp.json"]
        ports:
        - containerPort: 8030
          name: http
        volumeMounts:
        - name: config-volume
          mountPath: /config
        - name: debug-key
          mountPath: /etc/debug-key
          readOnly: true
      volumes:
      - name: config-volume
        configMap:
          name: derpprobe
      - name: debug-key
        secret:
          secretName: derp-secret 
---
apiVersion: v1
kind: Service
metadata:
  name: derpprobe
  labels:
    app: derpprobe
spec:
  selector:
    app: derpprobe
  ports:
  - name: http
    port: 80
    targetPort: 8030
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: derpprobe-customderp
spec:
  ingressClassName: tailscale
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: derpprobe
            port:
              name: http
  tls:
  - hosts:
    - derpprobe
